<resources>
    <string name="app_name">project Onboarding</string>
    <string name="tagline">Temukan mentor terbaikmu bersama Mentorify!</string>
    <string name="selamat">Selamat Datang</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="peta">Cari Berdasarkan Peta</string>
    <string name="bidang">Tersedia Berbagai Bidang</string>
    <string name="hubungi">  Hubungi Langsung, No Ribet!</string>
    <string name="mulai">Mulai</string>
    <string name="lupa">Masukkan email Anda untuk proses verifikasi \nkami akan mengirimkan
                        4 digit kode ke email \nAnda.</string>
    <string name="kami">Kami telah mengirimkan pesan konfirmasi atur
                        \nulang kata sandi ke email Anda. Kembali lagi ke \naplikasi setelah konfirmasi.</string>
    <string-array name="pendidikan">
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
    </string-array>
    <string name="client">547984089523-58s5d21k6tq7a4jv87a9himcjknbo4bu.apps.googleusercontent.com</string>
    <string name="faqbayar">\n
1. Buka Menu Cari\n
2. Pilih, cari, atau filter guru yang diinginkan\n
3. Lihat profil guru\n
4. Jika sesuai, maka hubungi guru melalui tombol "Hubungi Sekarang"\n
5. Berbincang dengan guru terkait harga dan jadwal\n
6. Jika sudah mencapai kesepakatan, maka pesan guru melalui tombol "Pesan".\n
7. Pilih jadwal yang diinginkan\n
8. Pilih metode pembayaran\n
9. Tunggu guru anda mengkonfirmasi pembayaran\n
10. Selamat! Anda sudah memesan guru \tdengan jadwal yang anda inginkan. Anda dapat \tmenghubungi guru kembali melalui fitur Chat di \tmenu Cari.</string>
    <string-array name="domisili">
        <item>Malang</item>
        <item>Batu</item>
        <item>Surabaya</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Bandung</item>
    </string-array>
    <string-array name="jenjang">
        <item>SD Kelas 1 - 3</item>
        <item>SD Kelas 4 - 6</item>
        <item>SMP</item>
        <item>SMA</item>
    </string-array>
    <string-array name="matpel">
        <item>Matematika</item>
        <item>Biologi</item>
        <item>Bahasa Indonesia</item>
        <item>Sosiologi</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="mengajar">
        <item>Ya</item>
        <item>Tidak</item>
    </string-array>
    <string name="webclient">
        547984089523-58s5d21k6tq7a4jv87a9himcjknbo4bu.apps.googleusercontent.com</string>
    <string name="berita_1">Kami memahami betapa pentingnya impian Anda untuk lulus dari sekolah impian,
        dan itulah mengapa kami telah merangkum beberapa strategi yang dapat membantu Anda mencapai tujuan tersebut. \n\n1. Kenali Tujuan Pendidikan Anda Sebelum memulai perjalanan menuju sekolah impian, penting untuk mengenali tujuan pendidikan Anda. Apakah Anda bermimpi menjadi ahli di bidang tertentu atau ingin berkontribusi pada masyarakat? Dengan menetapkan tujuan yang jelas, Anda akan memiliki landasan yang kuat untuk merancang strategi pendidikan Anda. \n\n2. Rencanakan dengan Matang Buat rencana pendidikan yang terperinci, termasuk jadwal studi, target nilai, dan proyek-proyek khusus. Dengan memiliki rencana yang matang, Anda dapat mengelola waktu dan sumber daya dengan lebih efisien, meningkatkan peluang untuk meraih kesuksesan akademis. \n\n3. Jalin Hubungan dengan Guru Berinteraksi dengan dosen dan mentor adalah kunci untuk sukses di dunia pendidikan. Mereka dapat memberikan pandangan yang berharga, membimbing Anda dalam pemahaman materi, dan membantu Anda menjembatani kesenjangan dalam pemahaman akademis.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari_guru">Cari guru terbaikmu</string>
    <string name="cari_atau">Cari atau pilih dari berbagai tingkat pendidikan</string>
    <string name="nama_siswa">Siswa!</string>
    <string name="nama_guru">Rahmawati K</string>
    <string name="mata_pelajaran">Matematika</string>
    <string name="hari">Senin, 13.00-14.00</string>
    <string name="waktu">1 Jam</string>
    <string name="rekomendasi_guru">Rekomendasi Guru</string>
    <string name="Populer_berita">Populer Berita</string>
    <string name="info_guru">Hai! Saya seorang guru yang penuh semangat, khususnya dalam matematika. Saya fokus membantu siswa memahami konsep matematika dengan cara yang menyenangkan dan interaktif. Pengalaman mengajar saya mencakup tingkat sekolah menengah. Saya percaya setiap siswa memiliki potensi unik, dan saya berusaha menciptakan lingkungan inklusif di kelas.</string>
    <string name="ulasan_rahma">Ibu Rahma sangat passionate dalam mengajar. Hal tersebut membuat saya mudah memahami apa yang dijelaskan olehnya.</string>
    <string name="faqs">FAQs</string>

</resources>

