<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">


    <Button
        android:id="@+id/button"
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:background="@color/purple"
        android:text="@string/lanjutkan"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.835"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView2"
        android:layout_width="527dp"
        android:layout_height="363dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView3"
        android:layout_width="315dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orang1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="195dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/selamat"
        android:textSize="27sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="321dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tagline"
        android:textSize="17sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>