<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="527dp"
        android:layout_height="363dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="315dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:srcCompat="@drawable/orang2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/bidang"
        android:textSize="27sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="321dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/tagline"
        android:textSize="17sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="311dp"
        android:layout_height="51dp"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:text="@string/lanjutkan"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.835"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"/>


</androidx.constraintlayout.widget.ConstraintLayout>