<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="412dp"
                android:layout_height="243dp"
                android:layout_marginTop="-7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rectanglemainmenuaunguatas" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="414dp"
                android:layout_height="128dp"
                android:layout_marginTop="136dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rectanglemainmenubiru" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/selamat"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/satoshi_medium"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:text="@string/cari_atau"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/selamat"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/satoshi_bold"
                android:text="@string/nama_siswa"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17" />

            <ImageButton
                android:id="@+id/belButton"
                android:contentDescription="@string/app_name"
                android:layout_width="70dp"
                android:layout_height="84dp"
                android:layout_marginEnd="36dp"
                android:background=""
                app:layout_constraintBottom_toTopOf="@+id/imageView12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView11"
                app:srcCompat="@drawable/bel_vector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="255dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/satoshi_black"
                    android:text="Jadwal"
                    android:textSize="25sp"
                    tools:ignore="MissingConstraints"
                    android:layout_marginStart="20sp"
                    tools:layout_editor_absoluteY="255dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="424dp"
                    android:layout_height="84dp">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="410dp"
                        android:layout_height="84dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/jadwal_rectangle" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_guru"
                        android:fontFamily="@font/satoshi_bold"
                        android:textSize="22sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginStart="20sp"
                        app:layout_constraintStart_toStartOf="@+id/imageView13"
                        app:layout_constraintTop_toTopOf="@+id/imageView13" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mata_pelajaran"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="2dp"
                        android:textSize="17sp"
                        android:fontFamily="@font/satoshi_medium"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/imageView13"
                        app:layout_constraintTop_toBottomOf="@+id/textView20"
                        app:layout_constraintVertical_bias="0.058" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hari"
                        android:fontFamily="@font/satoshi_bold"
                        android:textSize="22sp"
                        android:layout_marginTop="10sp"
                        android:layout_marginStart="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/imageView13"
                        app:layout_constraintStart_toEndOf="@+id/textView20"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="36dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/waktu"
                        android:textSize="17sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/imageView13"
                        app:layout_constraintHorizontal_bias="0.519"
                        app:layout_constraintStart_toEndOf="@+id/textView21"
                        app:layout_constraintTop_toBottomOf="@+id/textView22"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rekom_guru"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rekomendasi_guru"
                    android:fontFamily="@font/satoshi_black"
                    android:textSize="23sp"
                    android:layout_marginStart="20sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/template_rekom_guru"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/rekom_guru_rectangle"
                        tools:layout_marginStart="0dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rekom_berita"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/Populer_berita"
                    android:fontFamily="@font/satoshi_black"
                    android:textSize="23sp"
                    android:layout_marginStart="20sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/template_populer_berita"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/template_berita"
                        tools:layout_marginStart="4dp" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>

</ScrollView>